* MODIFIED: `device->selection: chain' now converts all members of the
  chain to type graphical.  This makes `tree->selection: chain-of-nodes'
  work as expected.

* ADDED: Error <->report: throw to make an error raise a Prolog
  (host-language) exception.

* ADDED: `regex ->file_pattern' to easily define regular expressions
  representing (Unix csh) file-patterns.

* FIXED: PostScript image rendering details: rounded horizontal
  scaling: old code rounded the image width up to the next multiple
  of 8 pixels.

* ADDED: PostScript generation for tree objects displayed using the
  `list' representation: connecting lines and open/close images.

* ADDED: PceEmacs prolog-mode: completion on M-. (find-definition).

* ADDED: `chain ->sort': optional `unique' argument to remove duplicates
  from the chain.

* FIXED: `text_buffer <-matching_quote' to deal properly scanning
  Prolog quoted strings like `can''t do that' backwards.

* ADDED: Possibility to relate nodes (using node->son) before attaching
  them to a tree.

================================================================
= Preparing for new message-passing			       =
================================================================

* MODIFIED: If an object as an implementation for <->catch_all the
  kernel no longer raise no_behaviour error.  Instead, the method itself
  should generate a warning to indicate it is not willing to accept the
  message.

* DELETED: class class_stub, once experimentally introduced to deal
  with class-autoloading.  Now obsolete.

* DELETED: `vmi->parent_goal'.  This mechanism harms any potential
  optimisation too much.

* MODIFIED: @reportee is now a chain of visited canditates (used to
  avoid delegation loops).

* MODIFIED: object->update_constraints is now only invoked automatically
  on graphical objects that have their <-area changed.  For all other
  cases, an explicit call to this method is required.

* FIXED/MODIFIED: text->string now copies the string if the argument