@@ -147,6 +147,8 @@
 
 %	Fancyplain pagestyle stuff
 
+\newcommand{\setupfancyplain}{}		% ???
+
 \headheight 14pt
 \renewcommand{\chaptermark}[1]{\markboth{#1}{#1}} % remember chapter title
 \renewcommand{\sectionmark}[1]{\markright{\thesection\ #1}}
