@@ -1,4 +1,4 @@
-.TH XPCE 1 "March 17 1997"
+.TH XPCE 1 "February 8, 1999"
 .SH NAME
 xpce \- Prolog with graphical user interface (GUI)
 .SH SYNOPSIS
@@ -118,22 +118,26 @@ of machines and users in one research group.
 XPCE is also available for
 .I SICStus Prolog
 version 3.  For information on SICStus Prolog,
-contact
-.I sicstus-request@sics.se.
+see
+.I http://www.sics.se.isl/sicstus.html
 .PP
-A commercially supported version of XPCE is distributed by AIIL and
-Quintus as ProWindows-3.  Contact
-.I sales@quintus.com
+A commercially supported version of XPCE is distributed by SICS for
+Quintus as ProWindows-3.  See
+.I http://www.sics.se/quintus
 for details.
 .PP
 For further information on available versions and copying you may use
 the XPCE WWW home at
-.I http://www.swi.psy.uva.nl/projects/xpce/home.html
+.I http://www.swi.psy.uva.nl/projects/xpce/
 or ftp to
 .I ftp://swi.psy.uva.nl/pub/xpce/
 or E-mail to
 .I xpce-request@swi.psy.uva.nl
 .PP
-Copyright (C) 1985-1997, SWI, University of Amsterdam
+Copyright (C) 1985-1999, SWI, University of Amsterdam
+.SH "SEE ALSO"
+xpce-client(1), pl(1)
 .SH AUTHOR
 Jan Wielemaker and Anjo Anjewierden
+
+
