@@ -114,10 +114,10 @@ initialise(M, Dir:[directory]) :->
 	send(M, send_super, initialise, 'PCE Manual'),
 	send(M, can_resize, @off),
 	send(M, done_message, message(M, quit)),
-	default(Dir, directory('$PCEHOME/man/reference'), Directory),
 	get(M, class_variable_value, user_scope, Scope),
 	get(M, class_variable_value, edit, Edit),
 	send(M, slot, maintainer, Edit),
+	default(Dir, directory('$PCEHOME/man/reference'), Directory),
 	send(M, check_directory, Directory),
 	send(M, slot, space, new(Space, man_space(reference, Directory))),
 	send(M, slot, tools, new(sheet)),
